gccida/g1/variable_section
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/variable_section/src/varasm.c:1114:31: error: use of undeclared identifier 'machine_mode'
mergeable_constant_section( ( machine_mode)LOBYTE( decl->block.supercontext), decl->type.uid & 0xFFFFFF, 0); 
                              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/variable_section/src/obj/varasm.o] Error 1
